--- a/style.css
+++ b/style.css
@@ -1,55 +1,81 @@
 @charset "UTF-8";
+
 *{
     margin: 0px;
     padding: 0px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Verdana', sans-serif;
 }
+
 main{
-    display: inline-block;
-    padding-left: 70px;
+    position: absolute;
+    top: 25%;
+    left: 40%;
 }
+
+footer{
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+
 h1{
-    font-size: 7vw;
-    position: absolute;
-    top: 140px;
-    left: 450px;
+    font-size: 300%;
 }
-h2{
-    position: absolute;
-    top: 270px;
-    left: 450px;
+
+h3{
+    font-weight: bold;
+    font-size: 70%;
 }
-div#txt{
+
+p{
+    font-size: 70%;
+
+}
+
+#background{
     position: absolute;
-    top: 370px;
-    left: 450px;
+    width: 35%;
+    height: 110%;
+}
+#white-logo{
+    position: absolute;
+    top: 38%;
+    left: 3%;
+    width: 30%;
+}
+#blue-logo{
+    position: absolute;
+    left: 40%;
+    top: 7%;
+    width: 4.0%;
+}
+#apple-icon{
+    width: 3%;
+}
+#sub-apple, #create-account, #enter{
+    border: 0.5px solid rgba(0, 0, 0, 0.232);
+    
+    border-radius: 30px;
+    text-decoration: none;
+    font-size: 70%;
+}
+#sub-apple{
+    color: black;
+    font-weight: bold;
+    padding: 9px 40px 9px 40px;
+}
+#create-account{
+    color: white;
+    font-weight: bold;
+    background-color: #1DA1F2;
+    padding: 9px 98px 9px 98px;
+}
+#enter{
+    color: #1DA1F2;
+    font-weight: bold;
+    background-color: white;
+    padding: 9px 98px 9px 98px;
+}
+
+#sla{
     text-align: center;
-}
-span#apple{
-    border-color: black;
-    border-radius: 100px;
-}
-div#img{
-    display: inline-block;
-    background-image: url(img/bckgr.png);
-    background-position: top center ;
-    width: 420px;
-    height: 680px;
-    position: absolute;
-    margin-right: 300px;
-}
-img#la{
-    display: inline-block;
-    position: relative;
-    top: -200px;
-    left: 120px;
-    width: 45px;
-    height: 36px;
-}
-img#lb{
-    position: relative;
-    top: 250px;
-    left: 30px;
-    width: 330px;
-    height: 280px;
 }
